# spumoni

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md
CMakeModules/: ConfigureCompilerClang.cmake  ConfigureCompilerGcc.cmake
analysis/: README.md  analyze_pml.py
include/: CMakeLists.txt  batch_loader.hpp  common.hpp  compute_ms_pml.hpp  doc_array.hpp  emp_null_database.hpp  ks_test.hpp  ms_pointers.hpp  ms_rle_string.hpp  refbuilder.hpp  run_spumoni.hpp  spumoni.hpp  spumoni_main.hpp  thresholds_ds.hpp
include/common/: CMakeLists.txt  common.hpp
include/ms/: CMakeLists.txt  matching_statistics.hpp  ms_pointers.hpp  ms_rle_string.hpp  run_spumoni.hpp  spumoni.hpp  spumoni_main.hpp  thresholds_ds.hpp
pipeline/: moni
src/: CMakeLists.txt  batch_loader.cpp  build_spumoni.cpp  compress_dictionary.cpp  compute_ms_pml.cpp  doc_array.cpp  emp_null_database.cpp  ks_test.cpp  matching_statistics.cpp  refbuilder.cpp  rlebwt_ms_build.cpp  run_spumoni.cpp  spumoni.cpp
test/src/: CMakeLists.txt  build_spumoni.cpp  compress_dictionary.cpp  matching_statistics.cpp  run_spumoni.cpp  spumoni.cpp
utils/: CMakeLists.txt  split_fa.cpp
